objects/slt__Timeline_Display__c.object
<CustomObject>
    <fields>
        <fullName>slt__Default_Zoom__c</fullName>
        <defaultValue>7</defaultValue>
        <description>The initial zoom level when the timeline first opens, from 0 (hours) to 9 (years). Default is 7.</description>
        <inlineHelpText>The initial zoom level when the timeline first opens, from 0 (hours) to 9 (years). Default is 7.</inlineHelpText>
        <label>Initial Zoom Level (0-9)</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>slt__Scrolling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the mouse wheel and/or trackpad gestures should scroll the timeline horizontally when the cursor is positioned over the timeline component (if not, it will scroll the outer page/container)</description>
        <inlineHelpText>Whether the mouse wheel and/or trackpad gestures should scroll the timeline horizontally when the cursor is positioned over the timeline component (if not, it will scroll the outer page/container)</inlineHelpText>
        <label>Mouse Wheel/Trackpad Scrolling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>slt__Zoom_Center__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When clicking the Zoom buttons, whether to zoom based on left edge of timeline (unchecked) or the center of the timeline (checked)</description>
        <inlineHelpText>When clicking the Zoom buttons, whether to zoom based on left edge of timeline (unchecked) or the center of the timeline (checked)</inlineHelpText>
        <label>Zoom from Center</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>